# asp_final

calibration_results/: 20250626_233919_123.csv  20250627_000057_123.csv  20250627_000214_123.csv  20250627_000327_123.csv  20250627_004911_1.csv  20250627_005101_131.csv  20250627_005238_1231.csv  20250627_011031_1331.csv  20250627_011315_12311.csv  20250627_011430_12131.csv  drone_analysis.py  thrust_characterization_20250626_225811.csv
materials/: path_s_curve.csv
src/: asp_final_proj.rviz  landing.md  readme (copy).md  refactooorr.md  실행명령어
src/colconignore/monitoring_board/: README.md  package.xml  setup.cfg
src/colconignore/monitoring_board/monitoring_board/: simple_mission_control.py
src/colconignore/uav_controller/: package.xml  refactor.md  setup.py
src/colconignore/uav_controller/uav_controller/: interactive_mission.py  visualization_utils.py  waypoint_mission.py
src/colconignore/ugv_controller/Data/: path_circle_r5.csv  path_straight.csv
src/colconignore/ugv_controller/launch/: path_follower.launch.py
src/colconignore/ugv_controller/src/: path_follower_node.py
src/colconignore/vision_opencv/image_geometry/: CMakeLists.txt
src/colconignore/vision_opencv/vision_opencv/: CMakeLists.txt
src/gazebo_env_setup/: CMakeLists.txt  package.xml
src/gazebo_env_setup/launch/: combined_launch.py  pose_tf_broadcaster.launch.py  topic_bridge.launch.py
src/gazebo_env_setup/src/: pose_tf_broadcaster.cpp
src/mission_admin_interfaces/: CMakeLists.txt  package.xml
src/mission_admin_interfaces/srv/: MissionComplete.srv
src/monitoring_board/: package.xml  setup.py
src/monitoring_board/monitoring_board/: dashboard.py  simple_mission_control.py
src/multi_tracker/: CMakeLists.txt  package.xml
src/multi_tracker/include/multi_tracker/: abscoord_marker_detection.hpp  multi_tracker_node.hpp
src/multi_tracker/launch/: x1_aruco_detector.launch.py  x500_aruco_detector.launch.py
src/multi_tracker/multi_tracker/: debug.py  marker_stack.py
src/multi_tracker/multi_tracker/result/: markers.csv
src/multi_tracker/src/: abscoord_marker_detection.cpp  multi_tracker_node.cpp
src/robot_control/: package.xml  reformat.md  setup.py  vis_refac.md  wp_refac.md
src/robot_control/config/: aruco_markers.csv  mission_params.yaml  rendezvous.csv  ugv_params.yaml  ugv_waypoints.yaml  ugv_wp.csv  ugv_wp_9.csv
src/robot_control/launch/: ugv_mission.launch.py
src/robot_control/robot_control/: refactooorr.md
src/robot_control/robot_control/admin/: dashboard_node.py  mission_control_node.py
src/robot_control/robot_control/temp/: base_mission_node.py  drone_control_utils.py  interactive_mission.py
src/robot_control/robot_control/uav/: base_mission_node.py  detected_marker_visualizer.py  interactive_calibration.py  interactive_mission.py  waypoint_mission.py
src/robot_control/robot_control/ugv/: path_follower_node.py  path_planner.py  pure_pursuit.py  velocity_profiler.py
src/robot_control/robot_control/utils/: drone_control_utils.py  marker_visual.py  visualization_utils.py  viz_factory.py  waypoint_parser.py
src/robot_control/robot_control/utils/result/: detected_markers.csv
src/uav_controller/: setup.py
src/uav_controller/uav_controller/: base_mission_node.py  interactive_mission.py  offboard_control_abscoord_flythrough.py  offboard_control_abscoord_test.py  offboard_control_abscoord_traversal.py  offboard_control_abscoord_traversal_test.py  offboard_control_mission.py  visualization_utils.py  waypoint_mission.py
src/ugv_controller/: CMakeLists.txt
src/ugv_controller/Data/: path_circle_r10.csv
src/ugv_controller/src/: path_follower_node.cpp  path_follower_node.py  teleop_keyboard_node.py
