<?xml version="1.0"?>
<package format="3">
  <name>mission_admin_interfaces</name>
  <version>0.0.1</version>
  <description>MissionAdmin 인터페이스 정의 패키지</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 메시지/서비스 생성 의존성 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- 이 줄이 반드시 포함되어야 합니다 -->
  </export>
</package>
