<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>통합 UAV 및 UGV 제어 패키지</description>
  <maintainer email="kikiws70@gmail.com">user1</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>px4_msgs</depend>
  <depend>vision_msgs</depend>
  
  <depend>mission_admin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>