<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monitoring_board</name>
  <version>0.0.0</version>
  <description>Monitoring board for UAV and vehicle telemetry</description>
  <maintainer email="kikiws70@gmail.com">user1</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>mission_admin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
