<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_controller</name>
  <version>0.0.0</version>
  <description>UAV Controller package for PX4 offboard control</description>
  <maintainer email="kikiws70@gmail.com">user1</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
